[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gui/icons/open-folder.png" type="Texture2D" id=1]
[ext_resource path="res://styles/Dialog.tres" type="StyleBox" id=2]
[ext_resource path="res://states/Editor/NewLevelDialog.gd" type="Script" id=3]

[node name="NewLevelDialog" type="Node2D"]
script = ExtResource( 3 )

[node name="LevelDialog" type="Popup" parent="."]
offset_left = 200.0
offset_top = 200.0
offset_right = 600.0
offset_bottom = 528.0
theme_override_styles/panel = ExtResource( 2 )
exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LevelDialog"]
offset_left = 30.0
offset_top = 30.0
offset_right = 370.0
offset_bottom = 303.0
theme_override_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="LevelDialog/VBoxContainer"]
offset_right = 340.0
offset_bottom = 224.0
theme_override_constants/h_separation = 10
columns = 2

[node name="LevelLabel" type="Label" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_top = 5.0
offset_right = 97.0
offset_bottom = 26.0
text = "Level name:"

[node name="Levelinput" type="LineEdit" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_left = 107.0
offset_right = 340.0
offset_bottom = 31.0
size_flags_horizontal = 3
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_top = 44.0
offset_right = 97.0
offset_bottom = 65.0
text = "Music:"

[node name="MusicSelector" type="HBoxContainer" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_left = 107.0
offset_top = 35.0
offset_right = 340.0
offset_bottom = 75.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="LevelDialog/VBoxContainer/GridContainer/MusicSelector"]
offset_top = 9.0
offset_right = 179.0
offset_bottom = 30.0
size_flags_horizontal = 3
text = "None"
clip_text = true

[node name="Button" type="Button" parent="LevelDialog/VBoxContainer/GridContainer/MusicSelector"]
offset_left = 189.0
offset_right = 233.0
offset_bottom = 40.0
icon = ExtResource( 1 )

[node name="EnemyLabel" type="Label" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_top = 88.0
offset_right = 97.0
offset_bottom = 109.0
text = "Enemy sprite:"

[node name="EnemySelector" type="HBoxContainer" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_left = 107.0
offset_top = 79.0
offset_right = 340.0
offset_bottom = 119.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="LevelDialog/VBoxContainer/GridContainer/EnemySelector"]
offset_top = 9.0
offset_right = 179.0
offset_bottom = 30.0
size_flags_horizontal = 3
text = "None"
clip_text = true

[node name="Button" type="Button" parent="LevelDialog/VBoxContainer/GridContainer/EnemySelector"]
offset_left = 189.0
offset_right = 233.0
offset_bottom = 40.0
icon = ExtResource( 1 )

[node name="EnemySpeedLabel" type="Label" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_top = 128.0
offset_right = 97.0
offset_bottom = 149.0
text = "Enemy speed:"

[node name="EnemySpeedInput" type="LineEdit" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_left = 107.0
offset_top = 123.0
offset_right = 340.0
offset_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 4
caret_blink = true

[node name="EnemyHealthLabel" type="Label" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_top = 163.0
offset_right = 97.0
offset_bottom = 184.0
text = "Enemy health:"

[node name="EnemyHealthInput" type="LineEdit" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_left = 107.0
offset_top = 158.0
offset_right = 340.0
offset_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 4
caret_blink = true

[node name="EnemyPointsLabel" type="Label" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_top = 198.0
offset_right = 97.0
offset_bottom = 219.0
text = "Enemy points:"

[node name="EnemyPointsInput" type="LineEdit" parent="LevelDialog/VBoxContainer/GridContainer"]
offset_left = 107.0
offset_top = 193.0
offset_right = 340.0
offset_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 4
caret_blink = true

[node name="ButtonsContainer" type="GridContainer" parent="LevelDialog/VBoxContainer"]
offset_top = 244.0
offset_right = 340.0
offset_bottom = 271.0
theme_override_constants/h_separation = 20
columns = 2

[node name="Cancel" type="Button" parent="LevelDialog/VBoxContainer/ButtonsContainer"]
offset_right = 160.0
offset_bottom = 27.0
size_flags_horizontal = 3
text = "Cancel"

[node name="Done" type="Button" parent="LevelDialog/VBoxContainer/ButtonsContainer"]
offset_left = 180.0
offset_right = 340.0
offset_bottom = 27.0
size_flags_horizontal = 3
text = "Done"

[node name="FileDialog" type="FileDialog" parent="."]
offset_left = 202.0
offset_top = 222.0
offset_right = 606.0
offset_bottom = 594.0
resizable = true
dialog_hide_on_ok = true
__meta__ = {
"_edit_use_anchors_": false
}
